RESOLVED FIXED228148
RunningBoard kills the network process if it is still holding the "holding locked file" assertion upon suspension
https://bugs.webkit.org/show_bug.cgi?id=228148
Summary RunningBoard kills the network process if it is still holding the "holding lo...
Chris Dumez
Reported 2021-07-21 08:22:59 PDT
The network process should release its FinishTaskUninterruptable assertion when it expires or RunningBoard will kill the process. Note that because the process assertion is released on a hysteresis timer, there are 2 possible cases: 1. The network process is no longer holding locked files, we'll release the assertion and suspend nicely. 2. The network process is still holding locked files despite our best efforts, we'll release the assertion and crash on suspension due to holding locked files.
Attachments
Patch (1.98 KB, patch)
2021-07-21 08:24 PDT, Chris Dumez
no flags
Patch (3.03 KB, patch)
2021-07-21 11:13 PDT, Chris Dumez
no flags
Patch (2.33 KB, patch)
2021-07-21 12:31 PDT, Chris Dumez
ews-feeder: commit-queue-
Patch (5.87 KB, patch)
2021-07-21 12:55 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-07-21 08:24:50 PDT
Chris Dumez
Comment 2 2021-07-21 11:13:56 PDT
Chris Dumez
Comment 3 2021-07-21 12:31:40 PDT
Chris Dumez
Comment 4 2021-07-21 12:55:57 PDT
EWS
Comment 5 2021-07-21 13:59:34 PDT
Committed r280160 (239857@main): <https://commits.webkit.org/239857@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433949 [details].
Radar WebKit Bug Importer
Comment 6 2021-07-21 14:00:20 PDT
Note You need to log in before you can comment on or make changes to this bug.